--- a/public/css/home.css
+++ b/public/css/home.css
@@ -124,3 +124,88 @@ header select:hover{
 #section7 h4{
     color: #1ec5e8;
 }
+#div_send_request {
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 100;
+    margin-left: 82%;
+    margin-top: 35%;
+}
+
+#btn_send_request {
+    font-family: 'Nunito', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: #4FD1C5;
+    background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+    border: none;
+    border-radius: 300px;
+    box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+    text-decoration: none;
+}
+
+#btn_send_request::before {
+    content: '';
+    border-radius: 300px;
+    min-width: calc((105%) + 12px);
+    min-height: calc((120%) + 12px);
+    border: 6px solid #00FFCB;
+    box-shadow: 0 0 60px rgba(0,255,203,.64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+}
+
+#btn_send_request:hover, #btn_send_request:focus {
+    color: #313133;
+    transform: translateY(-6px);
+}
+
+#btn_send_request:hover::before, #btn_send_request:focus::before {
+    opacity: 1;
+}
+
+#btn_send_request::after {
+    content: '';
+    width: 30px; height: 30px;
+    border-radius: 100%;
+    border: 6px solid #00FFCB;
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+}
+
+#btn_send_request:hover::after, #btn_send_request:focus::after {
+    animation: none;
+    display: none;
+}
+
+@keyframes ring {
+    0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+    100% {
+        width: 250px;
+        height: 250px;
+        opacity: 0;
+    }
+}
+
