--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -24,79 +24,6 @@ header select:hover{
     cursor: pointer;
 }
 
-.rate {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
-}
-.rate:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-}
-.rate:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
-}
-.rate:not(:checked) > label:before {
-    content: '★ ';
-}
-.rate > input:checked ~ label {
-    color: #ffc700;
-}
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-    color: #deb217;
-}
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-}
-
-
-.ratings {
-    float: left;
-    height: 46px;
-    padding: 0 10px;
-}
-.ratings:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-}
-.ratings:not(:checked) > label {
-    float:right;
-    width:1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:30px;
-    color:#ccc;
-}
-.ratings:not(:checked) > label:before {
-    content: '★ ';
-}
-.ratings > input:checked ~ label {
-    color: #ffc700;
-}
-.ratings:not(:checked) > label:hover,
-.ratings:not(:checked) > label:hover ~ label {
-    color: #deb217;
-}
-.ratings > input:checked + label:hover,
-.ratings > input:checked + label:hover ~ label,
-.ratings > input:checked ~ label:hover,
-.ratings > input:checked ~ label:hover ~ label,
-.ratings > label:hover ~ input:checked ~ label {
-    color: #c59b08;
-}
-
 #div_send_request {
     height: 100%;
     align-items: center;
@@ -180,4 +107,8 @@ header select:hover{
         height: 250px;
         opacity: 0;
     }
+}
+#passwordshow{
+    padding-bottom: 50px;
+    border-bottom: 1px solid black;
 }
